# Nogu

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.md
.github/workflows/: checks.yaml  docs.yaml  system_info.py  tests.yaml
docs/: README.md  index.md
docs/model_arena/: index.md
nogu/: utils.py
nogu/_src/: __init__.py
nogu/_src/utils/: chain.py  path_utils.py
nogu/tests/: __init__.py
nogu/tests/E2E/: dummy_e2e_api_test.py
nogu/tests/UT/: test_chain.py
nogu/tests/test_utils/: base_test_case.py
notebooks/: template.ipynb
