[project]
name = "Nogu"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Adam Dendek", email = "ar4th0rn@gmail.com" }
]
requires-python = "~=3.12.0"
dependencies = [
    "numpy~=1.26",
    "dataclasses>=0.6,<1.0",
    "dbapi>=0.0.13",
    "dicttoxml==1.7.16",
    "hdbcli>=2.23.27",
    "joblib>=1.4.2",
    "jupyter==1.0.0",
    "loguru==0.6.0",
    "matplotlib==3.8.2",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin==1.1",
    "mkdocs-material==9.7.1",
    "pandas~=2.3",
    "parameterized>=0.8.1,<0.9.0",
    "pytest>=7.0",
    "pytest-cov==4.0.0",
    "pytest-mock>=3.6.1",
    "scikit-learn==1.3.1",
    "scipy==1.16.0",
    "xmltodict==0.14.2",
    "graphviz>=0.20.3",
    "openpyxl>=3.1.5",
    "pydantic==2.7.2",
    "testcontainers>=4.12.0",
    "fastapi>=0.116.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=nogu --cov-report term-missing --no-cov-on-fail --cov-report=xml --junitxml=testresults.xml"

[tool.coverage.run]
branch = true

omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug:",
    "if debug:",
    "if DEBUG:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:"
    ]
ignore_errors = true


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "notebooks"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "D"]
ignore = [
    # Relax the convention by _not_ requiring documentation for every public package.
    "D104",
    #Relax the convention by _not_ requiring documentation for every public module.
    "D100",
    # Relax the convention by _not_ requiring documentation for __init__ methods
    "D107",
    # Relax unnecesary semicolon check, which is needed in notebooks in data visualizaton
    "E703"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# set google distring convention, taken from https://docs.astral.sh/ruff/faq/#does-ruff-support-numpy-or-google-style-docstrings
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

# a little bit of magic to enable pytorch
# taken from https://docs.astral.sh/uv/guides/integration/pytorch/#using-a-pytorch-index
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]
